2009-04-23  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/opensubtitles/opensubtitles.py:
	Fix failure to save downloaded subtitles, see
	https://bugzilla.redhat.com/show_bug.cgi?id=497210

2009-04-22  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c (totem_embedded_set_uri):
	* configure.in: Use the new URI resolution code in totem-pl-parser
	and fix crasher when opening a video at the root of a webserver
	(Closes: #579716)

2009-04-21  Bastien Nocera  <hadess@hadess.net>

	* data/totem.1: Remove out-dated options from the man page

2009-04-21  Bastien Nocera  <hadess@hadess.net>

	* data/totem-video-thumbnailer.1:
	* data/totem-video-thumbnailer.pod: Update man pages

2009-04-21  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Add version number to the libgdata check error

2009-04-15  Philip Withnall  <philip@tecnocode.co.uk>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_realize), (bacon_video_widget_init):
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_realize): Remainders of the patches below to
	use GtkWidget accessors in BaconVideoWidget, which changes how Bvw's
	GdkWindows are created. (Closes: #578591)

2009-04-15  Philip Withnall  <philip@tecnocode.co.uk>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_show), (bacon_video_widget_hide),
	(bacon_video_widget_expose_event),
	(bacon_video_widget_size_allocate), (bacon_video_widget_init),
	(bvw_handle_application_message), (bvw_handle_element_message),
	(bacon_video_widget_set_show_cursor):
	* src/backend/bacon-video-widget-xine.c (load_video_out_driver),
	(xine_event), (bacon_video_widget_unrealize),
	(bacon_video_widget_expose), (bacon_video_widget_show),
	(bacon_video_widget_hide), (bacon_video_widget_size_allocate),
	(bacon_video_widget_set_show_cursor),
	(bacon_video_widget_set_scale_ratio): Patches from Víctor Manuel
	Jáquez Leal <vjaquez@igalia.com> to use proper GtkWidget accessors